--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,9 @@ graft src/cs
 graft docs
 include *.rst
 global-exclude *.pyc
+
+# added by check-manifest
+include *.GPL
+include *.txt
+include *.yml
+include tox.ini
